--- a/css/style-css.css
+++ b/css/style-css.css
@@ -310,7 +310,8 @@ input {
     background-color: rgb(0 0 0 / 40%);
 }
 .video video {
-    width: 100%;
+    width: 70%;
+    border-radius: 12px;
 }
 .video .title-video {
     position: absolute;
@@ -363,7 +364,7 @@ input {
     border: none;
     outline: none;
     width: 100%;
-    background-color: #000;
+    border: 1px solid #aaa;
     border-radius: 6px;
 }
 .contact-us textarea[placeholder="type here ..."]::placeholder {
@@ -373,7 +374,7 @@ input {
     opacity: 0;
 }
 .contact-us textarea:focus {
-    color: #fff;
+    color: #191919;
 }
 .contact-us span {
     padding: 15px 20px;
@@ -557,5 +558,23 @@ input {
         transform: translateY(30px);
     }
 }
-
 /* end-animation */
+
+button {
+    position: fixed;
+    bottom: 50px;
+    right: 40px;
+    width: 50px;
+    height: 50px;
+    padding: 10px 20px;
+    border: none;
+    outline: none;
+    background-color: #191919;
+    box-shadow: 0 0 10px #00000029;
+    font-weight: bold;
+    color: #fff;
+    font-size: 14px !important;
+    border-radius: 50% !important;
+    transition: 0.4s;
+    display: none;
+}
